Added a right-click menu on tabs for closing individual maps.

--- a/CAMM (Crystal Alien Map Maker)/CAMM (Crystal Alien Map Maker)/FRMEditor.resx
+++ b/CAMM (Crystal Alien Map Maker)/CAMM (Crystal Alien Map Maker)/FRMEditor.resx
@@ -147,6 +147,9 @@
   <metadata name="SavePNG.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>542, 9</value>
   </metadata>
+  <metadata name="CTXMapTabs.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>643, 9</value>
+  </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>38</value>
   </metadata>
